# migration_database_etl

./: .env.example  .gitignore  COMANDOS.sh  build_and_deploy_local.sh  build_dist.sh  column_mapping.json  deploy.sh  import_history.json  import_rules.json  pyproject.toml  requirements.txt  supra_db_update.spec  table_contracts.yaml
scripts/: build_tb_siac_mapping_from_db.py  diag_medicao_supra_only.py  generate_column_mapping.py  infer_column_pairs_from_contract_row.py  web_analise_duplicatas_tabela.py  web_connection_info.py  web_diff_contrato.py  web_supravisao.py
supra_db_update/: __init__.py  __main__.py  _paths.py  change_queue.py  config.py  connection.py  differ.py  migrator.py  simdnit_scope.py  sync.py  table_map.py  tb_siac_scope.py  validators.py
