[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "supra_db_update"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "pymssql>=2.3.0",
]

[project.scripts]
supra_db_update = "supra_db_update.sync:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["supra_db_update*"]
